# gates

./: .gitignore  .releaserc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTOR_AGREEMENTS.md  LICENSE  README.md  action.yaml  build.sh  cdk.json  openapi.yaml  package-lock.json  package.json  publish.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/scripts/: generate_openapi_models.sh
.github/workflows/: action.yaml  api.yaml  cdk.yaml  ci.yaml  generate_models.yaml  lcov.yml  openapi.yaml  release.yaml  ui.yaml
action/: eslint.config.mjs  package-lock.json  package.json  tsconfig.json
action/src/: index.ts  main.test.ts  main.ts
api/: .gitignore  Cargo.toml  Makefile.toml  README.MD  build.rs
api/.run/: All Tests.run.xml  Build.run.xml  Cargo Clippy.run.xml  Cargo Format.run.xml  Lambda Build (Release).run.xml  Lambda Watch.run.xml  Start dynamodb-local.run.xml
api/openapi/: Cargo.toml  README.md
api/openapi/.openapi-generator/: FILES
api/openapi/docs/: ActiveHours.md  ActiveHoursPerWeek.md  AddCommentRequest.md  ApiApi.md  ApiInfo.md  Comment.md  Config.md  ConfigApi.md  CreateGateRequest.md  Environment.md  Gate.md  GateApi.md  GateState.md  GateStateRep.md  Group.md  Service.md  UpdateDisplayOrderRequest.md  UpdateGateStateRequest.md
api/openapi/src/apis/: api_api.rs  config_api.rs  configuration.rs  gate_api.rs  mod.rs
api/openapi/src/models/: active_hours.rs  active_hours_per_week.rs  add_comment_request.rs  api_info.rs  comment.rs  config.rs  create_gate_request.rs  environment.rs  gate.rs  gate_state.rs  gate_state_rep.rs  group.rs  mod.rs  service.rs  update_display_order_request.rs  update_gate_state_request.rs
api/scripts/: generate_openapi_models.sh
api/src/: clock.rs  date_time_switch.rs  id_provider.rs  main.rs  routes.rs  storage.rs  types.rs
api/src/routes/: api_info.rs
api/src/storage/: demo.rs  demo_quotes.txt  demo_quotes_provider.rs  dynamodb.rs  quote.rs
api/src/types/: active_hours.rs  app_state.rs  appstate.rs  representation.rs  use_cases.rs  usecases.rs
api/src/use_cases/: list_gates.rs  mod.rs  update_gate_state.rs
api/src/use_cases/add_comment/: route.rs  use_case.rs
api/src/use_cases/api_info/: route.rs
api/src/use_cases/create_gate/: route.rs  use_case.rs
api/src/use_cases/delete_comment/: route.rs  use_case.rs
api/src/use_cases/delete_gate/: route.rs  use_case.rs
api/src/use_cases/get_config/: route.rs  use_case.rs
api/src/use_cases/get_gate/: route.rs  use_case.rs
api/src/use_cases/get_gate_state/: route.rs  use_case.rs
api/src/use_cases/list_gates/: route.rs  use_case.rs
api/src/use_cases/update_display_order/: route.rs  use_case.rs
api/src/use_cases/update_gate_state/: route.rs  use_case.rs
api/tests/data/: create_gates_api_gateway_proxy_request.json  list_gates_api_gateway_proxy_request.json
cdk/: .eslintrc  .gitignore  .npmignore  cdk.json  copy-builds.ts  package-lock.json  package.json  vitest.config.mts
cdk/scripts/: copy-builds.ts  copy-readme.ts
cdk/src/: cross-region-string-ref.ts  gates.test.ts  gates.ts  global-stack.ts  index.ts  ssm-parameter-reader.ts
cdk/src/__snapshots__/: gates.test.ts.snap
cdk/src/function/: build.ts  tsconfig.json
cdk/test/: assets.ts  destroy-aspect.ts  env-variable.ts  integ.gates.test.ts  integ.gates.ts
cdk/test/integ.gates.test.ts.snapshot/: IntegTestDefaultTestDeployAssertE3E7D2A4.assets.json  IntegTestDefaultTestDeployAssertE3E7D2A4.template.json  StackUnderTest.assets.json  StackUnderTest.template.json  (+5 more)
integ-test/: integ.gates.ts
src/: cross-region-arn-reader-provider.ts  cross-region-string-ref.ts  global-stack.ts  index.ts
src/function/: tsconfig.json
ui/: .env.example  .gitignore  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  vite.config.ts
ui/e2e/: gates.e2e.test.ts
ui/src/: app.css  app.html  safelist.txt
ui/tests/: gates.e2e.test.ts
(+31 files in other folders)
