[package]
name = "gates-api"
version = "1.3.0"
edition = "2021"
license = "MIT"
authors = ["Consid Germany"]

[features]
local = []
date_time_switch = []

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1

[dependencies]
lambda_http = "0.17.0"
lambda_runtime = "0.14.4"
tokio = { version = "1.48.0", features = ["macros"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["fmt"] }
openapi = { path = "./openapi" }

axum = "0.8.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["serde"] }
aws-sdk-dynamodb = "1.98.0"
aws-config = "1.8.10"
itertools = "0.14.0"
tower-http = { version = "0.6.6", features = ["trace"] }
cuid2 = "0.1.4"
async-trait = "0.1.89"

openssl = { version = "0.10.75", features = ["vendored"] }
ring = "0.17.14"

[dev-dependencies]
axum-test = "18.2.1"
http-body-util = "0.1.3"
similar-asserts = "1.7.0"
testcontainers = "0.25.2"
testcontainers-modules = { version = "0.13.0", features = ["dynamodb"] }
mockall = "0.13.1"
rstest = "0.26.1"
