[package]
name = "openapi"
version = "1.12.0"
authors = ["OpenAPI Generator team and contributors"]
description = "OpenAPI specification for the Gates API"
license = "MIT License"
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde", "v4"] }
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]
